--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="%PUBLIC_URL%/TREK AI LOGO.png" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
+      name="TrekAI"
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -40,4 +39,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <footer>
+    <div class="acknowledgement" style="text-align: center;">© 2023 TrekAI.</div>
+  </br>
 </html>
